--- a/themes/pennlib/sass/components/_navigation.scss
+++ b/themes/pennlib/sass/components/_navigation.scss
@@ -13,7 +13,7 @@ header nav {
     display: block;
     padding: 0;
     margin: 0;
-    z-index: 9999;
+    z-index: 10;
 
     @include breakpoint($breakpoint-medium-width) {
       top: 0;
